# ICY

./: Cargo.toml  README.md  install.sh
src/: config.rs  core.rs  main.rs  ui.rs  utils.rs
