[package]
name = "icy"
version = "0.1.0"
edition = "2021"
authors = ["Abir Siddiky"]
description = "A modern, beautiful snapshot manager for Linux (Btrfs/LVM)"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.28"
crossterm = "0.28"
tui-input = "0.10"
which = "6.0"
regex = "1.10"
nix = { version = "0.29", features = ["user"] }
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
strip = true
